[api] implement food logging as transaction
